--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,8 +7,24 @@
   <title>Intro to Authentication</title>
 </head>
 <body>
-  <h1>Intro to Authentication</h1>
-  <%- body %> 
+  <nav>
+    <ul>
+      <li>
+        <a href="/users/new">Sign Up</a>
+      </li>
+      <li>
+        <a href="/users/login">Login</a>
+      </li>
+      <li>
+        <a href="/users/logout">Logout</a>
+      </li>
+    </ul>
+  </nav>
+
+  <main>
+    <h1>Intro to Authentication</h1>
+    <%- body %> 
+  </main>
   
 </body>
 </html>
