--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,15 +9,23 @@
 <body>
   <nav>
     <ul>
-      <li>
-        <a href="/users/new">Sign Up</a>
-      </li>
-      <li>
-        <a href="/users/login">Login</a>
-      </li>
-      <li>
-        <a href="/users/logout">Logout</a>
-      </li>
+      <% if (user) { %>
+        <!-- if the user is logged in -->
+        <li>
+          <a href="/users/profile">Profile</a>
+        </li>
+        <li>
+          <a href="/users/logout">Logout</a>
+        </li>
+      <% } else { %>
+        <!-- if the user is logged out -->
+        <li>
+          <a href="/users/new">Sign Up</a>
+        </li>
+        <li>
+          <a href="/users/login">Login</a>
+        </li>
+      <% } %>
     </ul>
   </nav>
 
